--- a/02_Program_structure/06_Пакеты и файлы.ipynb
+++ b/02_Program_structure/06_Пакеты и файлы.ipynb
@@ -130,7 +130,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Чтобы этот код работал, необходимо папку fish скопировать в $GOPATH/src. Этот код находится в файле others/fishUseExample.go"
+    "Чтобы этот код работал, необходимо папку fish скопировать в $GOPATH/src."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Импортирование"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для импорта пакета используется объявление **import**, после которого указывается путь до импортируемого пакета относительно предопределённых папок в системе. Одной из таких папок является папка $GOPATH/src, которая настраивается при первоначальной установке в системе Go. Другой папкой является GOROOT/src(узнать чему равен GOROOT можно, запустив команду **go env**)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Инициализация пакета"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Инициализация пакета начинается с инициализации переменных уровня пакета в том порядке, в котором они объявлены. При этом есть исключение, что зависимости разрешаются первыми. Например, в коде приведённом ниже переменная  fullName инициализируется в третью очередь, т.к. у неё есть зависимости от других переменных. В первую очередь инициализируется firstName, а за ней secondName."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "package main\n",
+    "\n",
+    "import \"fmt\"\n",
+    "\n",
+    "var fullName = firstName + \" \" + secondName\n",
+    "var firstName = \"John\"\n",
+    "var secondName = \"Smith\"\n",
+    "\n",
+    "func main() {\n",
+    "\tfmt.Println(fullName)\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Если пакет состоит из нескольких .go файлов они инициализируется в том порядке, в котором они **подаются** на вход компилятору. Команда go **сортирует** .go файлы по имени перед запуском компилятора.\n",
+    "Когда необходимо инициализировать более более сложные переменные типа таблиц можно воспользоваться специальной функцией под названием **init**. Любой файл может содержать произвольное количество функций следующего вида:\n",
+    "\n",
+    "func init() { ... }\n",
+    "\n",
+    "Эту функцию нельзя вызывать в явном виде, но во всём остальном она ничем не отличается от обычных функций. При запуске программы вызываются все функции init в порядке, в котором они объявлены внутри файла. Это действие выполняется для каждого файла. Пакеты инициализируются по очереди в порядке, в котором они импортируются. При этом сначала инициализируются зависимости: инициализация продвигается снизу вверх, пакет main инициализируется в последнюю очередь."
    ]
   }
  ],
