--- a/03.Базовые типы данных/04.Строки.ipynb
+++ b/03.Базовые типы данных/04.Строки.ipynb
@@ -391,6 +391,27 @@
     "И наоборот, преобразование слайса из рун в строку даёт строку в виде UTF-8, в которую входят все руны из слайса.  \n",
     "При преобразовании целого числа в строку, это число воспринимается как руна, т.е. мы получим представление в виде UTF-8 строки Unicode кода, код которого равен этому числу."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Строки и слайсы байт"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В стандартную библиотеку Go входят 4 пакета, которые сильно упрощают работу с строками: **bytes**, **strings**, **strconv** и **unicode**.  \n",
+    "\n",
+    "Пакет **strings** содержит много функций для поиска, замены, сравнения, урезания, разделения и объединения строк.  \n",
+    "Для уменьшения количества выделений и освобождений памяти при формировании строки можно воспользоваться типом **bytes.Buffer**. **Замечание**: в Go 1.10 добавили тип **strings.Builder** как замену bytes.Buffer.  \n",
+    "Пакет **strconv** содержит функции для преобразования булевых, целых и вещественных значений в строку и наоборот.  \n",
+    "Пакет **unicode** содержит функции для классификации рун(число, буква и т.д.).  \n",
+    "\n",
+    "При преобразовании строки в слайс из байт([]byte), создаётся **копия** массива байт строки и на эту копию и указывает слайс. Верно и обратное: преобразование слайса байт в строку создаёт новую копию строки. Это делается для того, чтобы изменения в одном месте не были видны в другом, т.к. в каждом случае идёт работа с копией."
+   ]
   }
  ],
  "metadata": {
