--- a/03.Базовые типы данных/05.Константы.ipynb
+++ b/03.Базовые типы данных/05.Константы.ipynb
@@ -17,19 +17,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "const pi = 3.14159"
+    "## Строковые константы"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Как и при объявлении переменных, константы можно объединить в одну **группу** объявлений:"
+    "Строковой константой называется текст между двойными кавычками(в Go есть и необработанные(raw) строки, которые заключаются в одинарные кавычки, но для этой главы это не имеет значения). Пример строковой константы:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, 世界\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"Hello, 世界\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Какого типа эта строковая константа? Очевидным и неверным ответом является string. На самом деле эта константа является так называемой **нетипизированной строковой константой**. Нетипизированные строковые константы обозначают константный текст, который ещё не имеет какого-либо фиксированного типа. Да это строка, но она не является значением Go типа string. Она остаётся нетипизированной строковой константой даже если дать ей имя:"
    ]
   },
   {
@@ -38,17 +60,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "const (\n",
-    "    MinSimple = 2\n",
-    "    GoldenRatio = 1.618\n",
-    ")"
+    "const hello = \"Hello, 世界\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Т.к. значение константы известно во время компиляции, её можно **использовать** при создании массива:"
+    "После этого объявления hello тоже является нетипизированной строковой константой. Нетипизированные константы являются просто значениями, у которых нет определённого типа, наличие которого заставило бы их следовать более строгим правилам, которые мешали бы комбинировать их с значениями других типов. Именно **нетипизированность** констант позволяет использовать их с большой свободой в Go.\n",
+    "\n",
+    "Тогда возникает вопрос: что же такое **типизированная** строковая константа? Всё очень просто: строковая константа, для которой явно указан тип:"
    ]
   },
   {
@@ -57,51 +78,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "const MaxSamples = 10\n",
-    "var probe [MaxSamples]int"
+    "const typedHello string = \"Hello, 世界\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "При объявлении константы можно указать тип, но если не указать, то он **выводится** из присваиваемого выражения:"
+    "Т.к. при объявлении константы typedHello был явно указан её тип, нельзя пользоваться этой константой при работе с другими типами. Т.е. следующий код работает:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lgo_exec.Water\n",
-      "float64\n",
-      "\n"
+      "Hello, 世界\n"
      ]
     }
    ],
    "source": [
     "import \"fmt\"\n",
     "\n",
-    "type Water float32\n",
-    "\n",
-    "const rain Water = 1.4\n",
-    "const sea = 1.5\n",
-    "\n",
-    "fmt.Printf(\"%T\\n\", rain)\n",
-    "fmt.Sprintf(\"%T\\n\", sea)"
+    "var s string\n",
+    "s = typedHello\n",
+    "fmt.Sprint(s)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "При объявлении группы констант можно не указывать значение всех констант в списке, кроме первой. В этом случае константы получают значение предыдущей константы, для которой указано значение:"
+    "а следующий нет:"
    ]
   },
   {
@@ -110,44 +122,26 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0 0 1 1 1\n"
+      "4:5: cannot use typedHello (constant \"Hello, 世界\" of type string) as MyString value in assignment\n"
      ]
     }
    ],
    "source": [
-    "const (\n",
-    "    a = 0\n",
-    "    b\n",
-    "    c = 1\n",
-    "    d\n",
-    "    e\n",
-    ")\n",
+    "type MyString string\n",
     "\n",
-    "fmt.Sprint(a, b, c, d, e)"
+    "var m MyString\n",
+    "m = typedHello\n",
+    "fmt.Sprint(m)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Если же нужны изменяющиеся значения, то можно воспользоваться **iota**."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Генератор констант iota"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Объявление const может использовать генератор констант **iota**, который позволяет инициализировать константы по какому-то общему правилу. Внутри объявления const значение iota первоначально равно 0, а далее оно увеличивается на 1 для каждого элемента. В качестве примера можно привести объявление констант для дней в пакете time:"
+    "Переменная m имеет тип MyString, а следовательно ей нельзя присваивать значения других типов(без явного приведения, при условии что это приведение возможно, т.е. когда у типов одинаковый базовый тип). Ей можно присваивать только значения типа MyString:"
    ]
   },
   {
@@ -159,109 +153,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 6\n"
+      "Hello, 世界\n"
      ]
     }
    ],
    "source": [
-    "type WeekDay int\n",
+    "type MyString string\n",
     "\n",
-    "const (\n",
-    "    Sunday WeekDay = iota\n",
-    "    Monday\n",
-    "    Tuesday\n",
-    "    Wednesday\n",
-    "    Thursday\n",
-    "    Friday\n",
-    "    Saturday\n",
-    ")\n",
-    "\n",
-    "fmt.Sprint(Sunday, Saturday)"
+    "const myStringHello MyString = \"Hello, 世界\"\n",
+    "var m MyString\n",
+    "m = myStringHello\n",
+    "fmt.Sprint(m)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Можно использовать и более сложные выражения:"
+    "Нетипизированные строковые константы благодаря отсутствию типа можно присваивать типизированным переменным, совместимым со строковым типом(т.е. имеющим базовый тип string). Т.е. следующий код работает:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "00000001\n",
-      "00000010\n",
-      "00000100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "const (\n",
-    "    Small = 1 << iota\n",
-    "    Medium\n",
-    "    Huge\n",
-    ")\n",
-    "\n",
-    "fmt.Sprintf(\"%08b\\n%08b\\n%08b\", Small, Medium, Huge)"
+    "m = \"Hello, 世界\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Нетипизированные константы"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Константы в Go имеют немного необычную природу. Хотя они и могут быть определённого базового типа, многие константы не связаны с каким-то определённым типом. Компилятор представляет такие константы с гораздо большей точностью, чем значения базовых типов и в вычислениях с такими константами получаются более точные значения. Существует **6 видов** таких несвязанных с типом констант, называемых **нетипизированными(untyped) константами**:\n",
-    " - нетипизированне булевы константы  \n",
-    " - нетипизированне целые константы  \n",
-    " - нетипизированне константы рун  \n",
-    " - нетипизированне вещественные константы  \n",
-    " - нетипизированне константы комплексных чисел  \n",
-    " - нетипизированне строковые константы  \n",
-    " \n",
-    "Не будучи связанными с каким-либо определённым типом нетипизированные константы кроме сохранения высокой точности представления до момента использования позволяют также делать вычисления, невозможные с константами, принадлежащими определённому типу без явной операции конвертирования:"
+    "также как и этот:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1024\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "const (\n",
-    "    ZiB = 1180591620717411303424    // больше, чем 2^64 - 1\n",
-    "    YiB = 1208925819614629174706176 // больше, чем 2^64 - 1\n",
-    ")\n",
-    "\n",
-    "fmt.Sprint(YiB/ZiB)"
+    "m = hello"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Значение констант ZiB и YiB больше максимально возможного значения типа uint64, но всё же деление даёт правильный результат. Если бы мы при объявлении таких констант указали бы тип, то была бы ошибка компиляции.  \n",
-    "\n",
-    "Нетипизированные константы можно присваивать типизированным переменным без явного преобразования типа:"
+    "## Тип по-умолчанию"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Если константы могут быть нетипизированными(как в случае строкового литерала), то возникает **вопрос**: как работает следующий код?"
    ]
   },
   {
@@ -273,31 +221,122 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.1415927\n",
-      "3.141592653589793\n"
+      "string\n"
      ]
     }
    ],
    "source": [
-    "import \"math\"\n",
-    "\n",
-    "const AnotherPI float64 = 3.14\n",
-    "\n",
-    "var x float32 = math.Pi\n",
-    "var y float64 = math.Pi\n",
-    "fmt.Sprint(x, \"\\n\", y)\n",
-    "\n",
-    "// Ошибка компиляции. x и AnotherPI имеют разные типы\n",
-    "// x = AnotherPI"
+    "str := \"Hello, 世界\"\n",
+    "fmt.Sprintf(\"%T\", str)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Константа math.Pi объявлена без типа, поэтому её можно присваивать как float32 так и float64. Но при присваивании типизированной константы(AnotherPI) переменной с другим типом(x), будет выведена ошибка компиляции.  \n",
+    "Почему переменная str получила тип string, если \"Hello, 世界\" является нетипизированной строковой константой? Дело в том, что нетипизированные константы имеют так называемый **тип по-умолчанию**(default type) - неявный тип, который передаётся значению, когда тип не указан. Для нетипизированных строковых констант очевидно типом по-умолчанию является тип string. Таким образом выражения:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str := \"Hello, 世界\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "и"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var str = \"Hello, 世界\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "эквивалентны выражению:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var str string = \"Hello, 世界\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "О нетипизированных константах можно думать как о значениях, которые находятся в неком идеальном пространстве значений, которое является менее ограниченным, чем пространство, в которой работает система типов Go. Но чтобы сделать что-либо с константами нам нужно присвоить их переменным и когда это случается, переменным(не константам) нужен тип и константа может сказать, какого типа должна быть переменная, используя свой тип по-умолчанию.\n",
     "\n",
-    "Для литералов синтаксис определяет к какому виду принадлежит константа. Литералы 0, 0.0, 0i и '\\u0000' обозначают константы с одинаковым значением, но разным видом: нетипизированная целая константа, нетипизированная вещественная константа, нетипизированная константа комплексного числа и нетипизированная руна. Точно также true и false являются нетипизированными булевыми константами и строковый литерал нетипизированной строковой константой."
+    "Иногда при использовании констант бывает неочевидна конечная цель значения. Рассмотрим выражение:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, 世界\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Sprintf(\"%s\", \"Hello, 世界\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "fmt.Sprintf имеет следующую сигнатуру:\n",
+    "\n",
+    "func Sprintf(format string, a ...interface{}) string\n",
+    "\n",
+    "Из неё видно, что агрументы после format имеют интерфейсный тип. При вызове функции Sprintf с нетипизированными константами создаются интерфейсные значения для передачи аргументов и конкретный тип каждого аргумента равен типу по-умолчанию передаваемой нетипизированной константы. Именно это и происходит в следующем коде:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "string: Hello, 世界\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Sprintf(\"%T: %v\", \"Hello, 世界\", \"Hello, 世界\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В общем типизированные константы подчиняются всем правилам типов в Go. Нетипизированные константы благодаря отсутствию типа позволяют работать с ними более свободно. Однако они имеют тип по-умолчанию, который используется при отсутствии какой-либо другой информации о типе."
    ]
   }
  ],
