--- a/03.Базовые типы данных/05.Константы.ipynb
+++ b/03.Базовые типы данных/05.Константы.ipynb
@@ -338,6 +338,420 @@
    "source": [
     "В общем типизированные константы подчиняются всем правилам типов в Go. Нетипизированные константы благодаря отсутствию типа позволяют работать с ними более свободно. Однако они имеют тип по-умолчанию, который используется при отсутствии какой-либо другой информации о типе."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Тип по-умолчанию определяется синтаксисом"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Тип по-умолчанию нетипизированной константы определяется его синтаксисом. Для строковых констант единственно возможным неявным типом является string. Для числовых констант можно привести следующий список:  \n",
+    " - целочисленные константы - **int**\n",
+    " - вещественные константы - **float64**\n",
+    " - константы рун - **rune**(синоним типа int32)\n",
+    " - константы комплексных чисел - **complex128**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Булевы константы"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Всё что мы сказали о нетипизированных строковых константах применимо и к нетипизированным булевым константам. Значения **true** или **false** можно присвоить любым переменным, совместимым с типом bool(т.е. имеющим такой базовый тип), но если задать булевым константам тип их уже нельзя смешивать с другими типами, кроме bool(без явного приведения типа)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Вещественные константы"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вещественные константы очень похожи на булевы и строковые константы:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "type MyFloat64 float64\n",
+    "const Zero = 0.0\n",
+    "const TypedZero float64 = 0.0\n",
+    "var mf MyFloat64\n",
+    "\n",
+    "mf = 0.0\n",
+    "mf = Zero\n",
+    "// mf = TypedZero // Ошибка\n",
+    "fmt.Sprint(mf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Но есть и своя особенность из-за наличия в Go двух вещественных типов:float32 и float64. Типом по-умолчанию для нетипизированных вещественных констант является float64, но нетипизированные строковые константы **можно без проблем** присвоить float32 переменным:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "var f32 float32\n",
+    "f32 = 1.73\n",
+    "f32 = Zero\n",
+    "// f32 = TypedZero // Ошибка. TypedZero имеет тип float64\n",
+    "fmt.Sprint(f32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вещественные константы являются хорошим моментом для введения понятия **переполнения**(overflow), или области значений.  \n",
+    "В Go нетипизированные числовые константы находятся в пространстве чисел произвольной точности: они **просто** являются обычными числами. Но когда их присваивают переменным, значение константы должно уместиться в переменную. Мы можем объявить очень большую константу:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const Huge = 1e1000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Huge является просто числом, но мы не можем присвоить его чему-либо или напечатать:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1:12: Huge (untyped float constant 1e+1000) overflows float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Sprint(Huge)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Даже если Huge нельзя ничему присвоить он может быть полезным при использовании совместно с другими константами и использовать результат, если он может быть представлен в float64:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Sprint(Huge / 1e999)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Таким же образом нетипизированные вещественные константы могут иметь очень большую точность. Например в пакете math для числа π задаётся гораздо больше цифр после запятой, чем поддерживает float64:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const Pi = 3.14159265358979323846264338327950288419716939937510582097494459"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Когда это значение присваивается переменной некоторую точность мы конечно же потеряем: в результате присваивания мы получим float64(или float32) значение, наиболее близкое к Pi:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "import \"math\"\n",
+    "pi := math.Pi\n",
+    "fmt.Sprint(pi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Наличие такого большого количества цифр позволяет проводить более точные вычисления с использованием констант до момента их присваивания переменным. Также это означает, что мы не будем спотыкаться о крайние случаи вещественных чисел как бесконечности или NaN'ы(деление на ноль является ошибкой компиляции, и в случае когда всё является числом нельзя получить \"не число\")."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Целочисленные константы"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Целочисленные константы конечно имеют много общего с остальными видами констант:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import \"fmt\"\n",
+    "\n",
+    "type MyInt int\n",
+    "\n",
+    "const Three = 3\n",
+    "const TypedThree int = 3\n",
+    "var mi MyInt\n",
+    "\n",
+    "mi = 3\n",
+    "mi = Three\n",
+    "// mi = TypedThree // Ошибка\n",
+    "fmt.Sprint(mi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "То же самое можно сделать и для остальных целочисленных типов:  \n",
+    "**int int8 int16 int32 int64**  \n",
+    "**uint uint8 uint16 uint32 uint64**  \n",
+    "**uintptr**  \n",
+    "\n",
+    "Плюс ещё **byte** как псевдоним для типа uint8 и **rune** как псевдоним для int32.\n",
+    "\n",
+    "Целочисленные значения могут быть записаны в различном виде и каждый вид имеет свой тип по-умолчанию. Для простых констант как 3 типом по-умолчанию является int, а для рун 'a' или '世' - тип rune.\n",
+    "\n",
+    "Ни у одной нетипизированной целочисленной константы типом по-умолчанию не является беззнаковый целый тип. Однако гибкость нетипизированных целочисленных констант позволяет нам инициализировать беззнаковые целочисленные переменные, используя простые константы:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uint uint uint\n"
+     ]
+    }
+   ],
+   "source": [
+    "var u uint = 17\n",
+    "var v = uint(17)\n",
+    "w := uint(17)\n",
+    "fmt.Sprintf(\"%T %T %T\", u, v, w)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Как и для вещественных констант на все целочисленные значения помещаются в целочисленные переменные. Могут возникнуть две проблемы: либо значение слишком большое(или маленькое) или беззнаковой переменной присваивается отрицательное значение. Например, int8 может содержать значения от -128 до 127 включительно и значения, которые не входят в этот диапазон, не могут быть присвоены переменной такого типа:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1:15: 128 (untyped int constant) overflows int8\n"
+     ]
+    }
+   ],
+   "source": [
+    "var i8 int8 = 128"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Таким же образом нельзя присвоить отрицательное значение переменной типа byte, которая может хранить значения от 0 до 255 включительно:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1:14: -1 (untyped int constant) overflows byte\n"
+     ]
+    }
+   ],
+   "source": [
+    "var b byte = -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Генератор констант iota"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Объявление const может использовать генератор констант **iota**, который позволяет инициализировать константы по какому-то общему правилу. Внутри объявления const значение iota первоначально равно 0, а далее оно увеличивается на 1 для каждого элемента. В качестве примера можно привести объявление констант для дней в пакете time:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "type WeekDay int\n",
+    "\n",
+    "const (\n",
+    "    Sunday WeekDay = iota\n",
+    "    Monday\n",
+    "    Tuesday\n",
+    "    Wednesday\n",
+    "    Thursday\n",
+    "    Friday\n",
+    "    Saturday\n",
+    ")\n",
+    "\n",
+    "fmt.Sprint(Sunday, Saturday)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Можно использовать и более сложные выражения:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00000001\n",
+      "00000010\n",
+      "00000100\n"
+     ]
+    }
+   ],
+   "source": [
+    "const (\n",
+    "    Small = 1 << iota\n",
+    "    Medium\n",
+    "    Huge\n",
+    ")\n",
+    "\n",
+    "fmt.Sprintf(\"%08b\\n%08b\\n%08b\", Small, Medium, Huge)"
+   ]
   }
  ],
  "metadata": {
