--- a/03.Простые типы данных/01.Целочисленные типы.ipynb
+++ b/03.Простые типы данных/01.Целочисленные типы.ipynb
@@ -58,7 +58,7 @@
     "\\>  \n",
     "\\>=  \n",
     "\n",
-    "На самом деле все значения базовых типов - булевы значения, числа и строки - являются **сравнимыми**(comparable), т.е. два значения одинакового базового типа можно сравнить между собой, используя операторы **==** и **!=**. Значения многих других типов данных не являются сравнимыми.  \n",
+    "На самом деле все значения простых типов - булевы значения, числа и строки - являются **сравнимыми**(comparable), т.е. два значения одинакового простого типа можно сравнить между собой, используя операторы **==** и **!=**. Значения многих других типов данных не являются сравнимыми.  \n",
     "\n",
     "Также в Go есть и побитовые операции &, |, ^, &^(очистка бита), << и >>.\n",
     "\n",
