--- a/03.Простые типы данных/05.Константы.ipynb
+++ b/03.Простые типы данных/05.Константы.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "Константами являются выражения, значение которых известно компилятору и вычисляются они во время компиляции, а не во время выполнения программы(runtime). Базовым типом для константы может быть только булев тип, строка или числовой тип(целые, вещественные и комплексные числа, а также руны).  \n",
     "\n",
-    "Объявление **const** определяет именованное значение, которое синтаксически выглядит как переменная, но его значение нельзя изменить во время выполнения программы. Пример константы:"
+    "Объявление **const** определяет именованное значение, которое синтаксически выглядит как переменная, но его значение нельзя изменить во время выполнения программы."
    ]
   },
   {
