--- a/04.Составные типы данных/03.Словари(map).ipynb
+++ b/04.Составные типы данных/03.Словари(map).ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Хеш-таблица** - это набор пар ключ-значение, в котором все ключи различны и значения, связанные с ключами, могут быть получены, обновлены или удалены в среднем за фиксированное количество операций сравнений ключей вне зависимости от размера массива.\n",
+    "**Хеш-таблица** - это набор пар ключ-значение, в котором все ключи различны и значения, связанные с ключами, могут быть получены, обновлены или удалены в среднем за фиксированное количество операций сравнения ключей вне зависимости от размера.\n",
     "\n",
-    "В Go **словарь**(map) это ссылка на хеш-таблицу. Тип словарь описывается как **map[K]V**, где K и V это типы ключей и значений. Все ключи и все значения словаря имеют одинаковый тип, но необъязательно тип ключей должен совпадать с типом значений. Тип ключей K должен быть сравнимым с помощью == типом, чтобы словарь мог проверить равен ли ключ какому-либо ключу, который уже в нём есть. Хотя вещественные числа и являются сравнимыми, не рекомендуется использовать их в качестве ключей словаря. На тип значений V не накладывается никаких ограничений.\n",
+    "В Go **словарь**(map) это ссылка на хеш-таблицу. Тип словарь описывается как **map[K]V**, где K и V это типы ключей и значений. Все ключи и все значения словаря имеют одинаковый тип, но необъязательно тип ключей должен совпадать с типом значений. Тип ключей K должен быть **сравнимым** с помощью == типом, чтобы словарь мог проверить равен ли ключ какому-либо ключу, который уже в нём есть. Хотя вещественные числа и являются сравнимыми, не рекомендуется использовать их в качестве ключей словаря. На тип значений V не накладывается никаких ограничений.\n",
     "\n",
     "Встроенная функция **make** позволяет создавать словари:"
    ]
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "map[Bob:28 James:1]\n"
+      "map[James:1 Bob:28]\n"
      ]
     }
    ],
@@ -189,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "5\n",
-      "6\n"
+      "0\n",
+      "1\n",
+      "2\n"
      ]
     }
    ],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -244,16 +244,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alice - 21\n",
-      "John - 4\n",
-      "Bob - 28\n"
+      "Alice - 2\n",
+      "Bob - 28\n",
+      "James - 1\n"
      ]
     }
    ],
@@ -272,16 +272,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alice - 21\n",
+      "Alice - 2\n",
       "Bob - 28\n",
-      "John - 4\n"
+      "James - 1\n"
      ]
     }
    ],
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -415,6 +415,13 @@
     "if _, ok := population[\"Moscow\"]; !ok {\n",
     "    fmt.Println(\"Not found\")\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Как и слайсы, словари **нельзя** сравнивать между собой. Их можно сравнивать только с значением nil."
    ]
   }
  ],
